--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fagylalt</title>
 
-    <navbar>
-        
-    </nav>
-
 </head>
 <body>
-    <header>A fagylalt</header>
+    <header>
+        
+    </header>
 
     <div class="Bemutatas">
         <h1 class="kiiras">Bemutatása</h1>
