--- a/index.html
+++ b/index.html
@@ -44,12 +44,20 @@
           </div>  
         </div>
 
-        <div>
-            <h3>Tápérték</h3>
-            <p> A fagylaltban a tej miatt jelentős mennyiségű kalcium és vitaminok találhatóak, viszont sok benne a telített zsírsav és cukor is.</p>
-            <p> A modern, üzletekben kapható fagylaltok és jégkrémek stabilizáló- és emulgeálószereket is tartalmaznak, ami az eltarthatóság idejét növeli.</p>    
-            <p>Egy gombóc energiatartalma körülbelül 100-160 kcal, 5-15% zsírt tartalmaz.</p>
+        <div class="container" id="tapertekek">
+            <div class="row">
+                <div class="col-md-6" >
+                    <p id="fagylalt"> A fagylaltban a tej miatt jelentős mennyiségű kalcium és vitaminok találhatóak, viszont sok benne a telített zsírsav és cukor is.</p>
+                    <p id="fagylalt"> A modern, üzletekben kapható fagylaltok és jégkrémek stabilizáló- és emulgeálószereket is tartalmaznak, ami az eltarthatóság idejét növeli.</p>    
+                    
+                </div>
+
+                <div class="col-md-6" id="masodik">
+                    <h3 class="tapertek">Tápérték</h3>
+                </div>
+            </div>
         </div>
+    </div>
 
     </div>
 
